--- a/faqpagestyle.css
+++ b/faqpagestyle.css
@@ -707,8 +707,9 @@ font-size: 36px;
   }
   
   .quick-links a:hover {
-    color: #f0f0f0; /* Change color on hover */
+    color: #abf5c0;  /* Change color on hover */
     text-decoration: underline;
+    text-shadow: 0 0 5px currentColor;
   }
   
   @media (max-width: 768px) {
