--- a/style.css
+++ b/style.css
@@ -1701,14 +1701,15 @@ font-size: 36px;
   text-decoration: none;
   color: #fff;
   transition: color 0.3s ease;
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
+
 .quick-links a:hover {
-  color: #abf5c0; /* Change color on hover */
-  /* text-decoration: underline; */
-  animation: blink 1s step-start infinite;
+  color: #abf5c0; 
+  /* animation: blink 1s step-start infinite; */
   text-shadow: 0 0 5px currentColor;
+  text-decoration: underline;
 }
 
 @keyframes blink {
@@ -1888,5 +1889,8 @@ font-size: 36px;
         transform: rotate(360deg);
     }
 }
+
+
+
 
 /* Preloader Css Ends */
