hover effect is added to all pages

--- a/style.css
+++ b/style.css
@@ -1704,12 +1704,11 @@ font-size: 36px;
   font-size: 1.5rem;
 }
 
-
 .quick-links a:hover {
-  color: #abf5c0; 
-  /* animation: blink 1s step-start infinite; */
+  color: #abf5c0; /* Change color on hover */
+  /* text-decoration: underline; */
+  animation: blink 1s step-start infinite;
   text-shadow: 0 0 5px currentColor;
-  text-decoration: underline;
 }
 
 @keyframes blink {
@@ -1889,8 +1888,5 @@ font-size: 36px;
         transform: rotate(360deg);
     }
 }
-
-
-
 
 /* Preloader Css Ends */
