--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -412,6 +412,39 @@ nav {
 
   margin-right: 5px; /* Adjust margin as needed */
 }
+#backtoTop{
+  position :fixed;
+  bottom: 90px;
+  right: 24px;
+  height: 60px;
+  width: 60px;
+  background-color: #B19222;
+  border-radius:50%;
+  margin-bottom: 10px;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  display: none; 
+  transition: background-color 0.5s ease-in 0.3s;
+}
+#backtoTop a{
+  display: inline-block;
+height: 100%;
+width: 100%;
+ border-radius: 50%;
+ justify-content: center;
+ align-items: center;
+  transition: 0.5s ease;
+  padding: 1.2rem;
+
+}
+#backtoTop a:hover{
+background-color: #a48613;
+}
+#backtoTop a i {
+font-size: 36px;
+  color: white;
+}
 .footer {
   display: flex;
   justify-content: space-between;
