--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -491,6 +491,8 @@ font-size: 36px;
 }
 .footer-icons {
   text-align: center;
+  position: absolute;
+  left: 1000px;
 }
 .footer-text {
   text-align: center;
@@ -549,6 +551,9 @@ font-size: 36px;
 .quick-links h2 {
   font-size: 20px;
   margin-bottom: 15px;
+  position: absolute;
+  left: 1130px;
+  top: 3280px;
 }
 .quick-links ul {
   list-style-type: none;
