--- a/faqpagestyle.css
+++ b/faqpagestyle.css
@@ -694,6 +694,9 @@ font-size: 36px;
   .quick-links h2 {
     font-size: 20px;
     margin-bottom: 15px;
+    position: absolute;
+    left: 1050px;
+  top: 980px;
   }
   
   .quick-links ul {
