--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -695,7 +695,23 @@ font-size: 36px;
   display: none;
 }
 
-@media (max-width: 1216px) {
+
+@media (min-width: 1216px){
+
+  .navbar {
+    position: absolute;
+    margin-left: 350px;
+    width: 100%;
+    display: inline-block;   
+  }
+
+}
+
+
+
+
+
+@media (max-width: 1300px) {
   .header{
     padding: 2px;
     justify-content: center;
@@ -731,7 +747,7 @@ font-size: 36px;
   .navbar a {
     display: block;
     font-size: 2.8vmax;
-    margin: 3rem 0;
+    margin: 2rem 0;
     margin-left: 8vmax;
   }
   .navbar a i {
