--- a/style.css
+++ b/style.css
@@ -1204,6 +1204,29 @@ input[type="number"]::-webkit-inner-spin-button {
   /* Ensure consistent width */
 }
 
+/*
+.contact form {
+  max-width: 70rem;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 3rem;
+  border: 2px solid #0b7d45;
+  border-radius: 1rem;
+  padding: 2rem;
+}
+*/
+
+.contact form {
+  max-width: 60rem;
+  margin: 0 auto;
+  padding: 2rem;
+  border: 2px solid #0b7d45;
+  /* Green border */
+  border-radius: 1rem;
+  /* Rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* Soft shadow */
+}
 /* ---------------------------------------------------------------------------------------------- */
 
 .contact form .btn {
